--- a/frontend/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/frontend/src/pages/ProfilePage/ProfilePage.module.scss
@@ -1,36 +1,44 @@
-/* pages/ProfilePage/ProfilePage.module.scss */
-.wrapper {
-    max-width: 400px;
-    margin: 2rem auto;
-    padding: 1rem;
-    background: #f7f7f7;
-    border-radius: 8px;
-  }
-  
-  .form {
+.main {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-  }
-  
-  input {
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  
-  button {
-    padding: 0.75rem;
-    border: none;
-    background-color: #1e1e2f;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .error {
-    color: red;
-    text-align: center;
-  }
-  
+    place-items: center;
+
+    .logout {
+      color: #f7f7f7;
+    }
+
+    .wrapper {
+        max-width: 400px;
+        margin: 2rem auto;
+        padding: 1rem;
+        background: #f7f7f7;
+        border-radius: 8px;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    input {
+        width: 100%;
+        padding: 0.5rem;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+    }
+
+    button {
+        padding: 0.75rem;
+        border: none;
+        background-color: #1e1e2f;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .error {
+        color: red;
+        text-align: center;
+    }
+}
